testsuite/tests/parser/should_fail/T14588.stderr

T14588.hs:4:19: error: [GHC-79767]
    Illegal bang-pattern
    !x
    Suggested fix:
      Perhaps you intended to use the ‘BangPatterns’ extension
